Выполнены правки - удалил ненужные контейнеры, указал ширину в каждом секции согласно макета

--- a/css/contents.css
+++ b/css/contents.css
@@ -3,6 +3,8 @@
 }
 
 .contents-container {
+    width: 1140px;
+    margin: 0 auto;
     padding: 25px 45px;
     border-radius: 10px;
     background-color: hsl(0, 0%, 94.5%)
