--- a/css/text-second.css
+++ b/css/text-second.css
@@ -3,8 +3,8 @@
 }
 
 .text-second-container {
-    padding-left: 30px;
-    padding-right: 30px;
+    width: 1080px;
+    margin: 0 auto;
 }
 
 .text-second__caption {
