--- a/css/main.css
+++ b/css/main.css
@@ -51,6 +51,17 @@ body {
     background-color: hsl(0, 0%, 100%)
 }
 
+main {
+    min-width: 320px;
+    padding: 60px 150px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 120%;
+    color: hsl(0, 0%, 0%);
+    background-color: hsl(0, 0%, 100%);
+}
+
 img {
     max-width: 100%;
     height: auto;
@@ -99,19 +110,6 @@ iframe {
     height: 1px !important;
     width: 1px !important;
     overflow: hidden;
-}
-
-.body-container {
-    min-width: 320px;
-    width: 1440px;
-    margin: 0 auto;
-    padding: 60px 150px;
-    font-family: 'Roboto', sans-serif;
-    font-size: 20px;
-    font-weight: 400;
-    line-height: 120%;
-    color: hsl(0, 0%, 0%);
-    background-color: hsl(0, 0%, 100%);
 }
 
 .title {
