--- a/css/text-first.css
+++ b/css/text-first.css
@@ -3,8 +3,8 @@
 }
 
 .text-first-container {
-    padding-left: 30px;
-    padding-right: 30px;
+    width: 1080px;
+    margin: 0 auto;
 }
 
 .text-first__caption {
